--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "license": "MIT",
   "scripts": {
     "clean": "rimraf ./cache && rimraf ./artifacts",
-    "compile": "yarn clean && hardhat compile && hardhat --network optimism compile"
+    "compile": "yarn clean && hardhat compile && hardhat --network optimism compile",
+    "test": "mocha"
   },
   "devDependencies": {
     "@eth-optimism/contracts": "^0.2.4",
     "@eth-optimism/core-utils": "^0.2.1",
     "@eth-optimism/hardhat-ovm": "^0.0.2",
     "@nomiclabs/hardhat-ethers": "^2.0.1",
+    "chai": "^4.3.4",
     "ethers": "^5.0.24",
     "hardhat": "^2.0.7",
+    "mocha": "^9.0.2",
     "rimraf": "^3.0.2"
   },
   "dependencies": {
