--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "clean": "rimraf ./cache && rimraf ./artifacts",
     "compile": "yarn clean && hardhat compile && hardhat --network optimism compile",
-    "test": "mocha"
+    "test": "mocha",
+    "docify": "node docify.js"
   },
   "devDependencies": {
     "@eth-optimism/contracts": "^0.2.4",
@@ -21,6 +22,7 @@
     "rimraf": "^3.0.2"
   },
   "dependencies": {
-    "@eth-optimism/watcher": "^0.0.1-alpha.9"
+    "@eth-optimism/watcher": "^0.0.1-alpha.9",
+    "solidity-docgen": "^0.5.13"
   }
 }
